# influxdb2

./: .drone.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  drone.yml  run_all_test.sh  run_all_tests.sh
.github/workflows/: main.yml
examples/: custom_write.rs  list_all_buckets.rs  write.rs  write_01.rs  write_stream.rs
src/: client.rs  error.rs  id.rs  lib.rs  precision.rs  timestamp.rs
src/bucket/: mod.rs  retention_rule.rs
src/write/: mod.rs
tests/: write.rs
