[package]
name = "influxdb2"
description = "Influx DB v2 API Client"
version = "0.1.1"
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/xoac/influxdb2"
# # This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
# TODO keywords = ["...", "..."]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at https://crates.io/category_slugs, and
# they must match exactly.
# TODO categories = ["...", "..."]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Rust API Guidelines at https://rust-lang.github.io/api-guidelines/about.html

[badges]
 maintenance = { status = "actively-developed" }

[dependencies]
influxdb-line-protocol = { git = "https://github.com/xoac/influxdb-line-protocol" }
reqwest = { version = "0.11", default-features=false }
http = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
chrono = "0.4"
serde_json = "1"
derive_more = "0.99"
ordered-float = "1"
log = "0.4"

[features]
default = ["reqwest/default-tls", "json"]
rustls = ["reqwest/rustls-tls"]
json = ["reqwest/json"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["default", "compat"] }
futures_01 = { version = "0.1.25", package = "futures"}
tokio_01 = { version = "0.1", package = "tokio" }
pretty_env_logger = "0.4"

# This Cargo.toml was generated from template: https://github.com/xoac/crates-io-lib-template
